[Fix] Swiping down on mobile tray caused a refresh in chrome

--- a/src/components/shared/Tray/Tray.module.scss
+++ b/src/components/shared/Tray/Tray.module.scss
@@ -12,7 +12,7 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   position: absolute;
   height: calc(100vh - 122px);
-  transition: top 0.3s ease;
+  transition: top 0.35s ease;
 
   @media all and (min-width: 410px) {
     height: calc(100vh - 138px);
